SubVersion: $Id$

Log of changes:	tilp (cables, calcs, files, ticonv)

- 11/06/2006, version 0.16 (0.1.1, 0.2.1, 0.1.5, 0.0.3): roms
	- removed text argument in pbars: not used because internally set-up by ticalc2
	- reworked management of progress bars
	- 

- 09/06/2006, version 0.15 (0.1.1, 0.2.0, 0.1.5, 0.0.3): roms
	- use reworked dirlist API
	- updated TiLP to follow the slightly modified FLASH app dirlist format
	- fixed 'bug' #1499672: sorting by name is case insensitive for now.
	- fixed bug #1499672: sorting by type didn't work properly on the pc-panel
	- implemented sending of several FLASH app at once
	- allowed simultaneous sending of apps & vars

- 28/05/2006, version 0.14 (0.1.0, 0.1.3, 0.1.4, 0.0.3): roms
	- fixed USB device reconnection
	- reworked device box: display detected USB device in a list as well as full probing list.
	- tilp_device_probe_usb is now restricted to FLASH devices only (faster)
	- "SilverLink is still NACK'ed after error. Does not appear with TiLP1 => open/close 
		instead of reset. Why ?" => Silver/DirectLink cable are now reopened instead of being
		reset when error occurs.
	- allow receiving of several FLASH app at once
	- fixed/improved tilp_file_check & tilp_file_move_with_check

- 25/05/2006, version 0.13 (0.0.9, 0.1.3, 0.1.4, 0.0.3): roms/tyler
	- removed certificate support (deprecated)
	- raise the action box when sending files from command line in GUI mode
	- fixed violation in tree_selection_changed (raised when selecting files for deletion)
	- fixed progress bar update (tyler)
	- allowed MinGW Compiler to run TiLP on a Linux File Hierarchy system (tyler)

- 09/05/2006, version 0.12 (0.0.9, 0.1.2, 0.1.3, 0.0.3): roms
	- fixed bug in the use of USB auto-detect
	- rename 'Ready' button into 'Connect' when using DirectLink
	- update remote frame in the action box
	- update memory used when sending/deleting variables

- 06/05/2006, version 0.11 (0.0.9, 0.1.1, 0.1.3, 0.0.3): roms