@@ -5,6 +5,8 @@ Log of changes:	tilp (cables, calcs, files, ticonv)
 - 11/06/2006, version 0.16 (0.1.1, 0.2.1, 0.1.5, 0.0.3): roms
 	- removed text argument in pbars: not used because internally set-up by ticalc2
 	- reworked management of progress bars
+	- fixed mis-use of file selection (mix between local.selection & local.file_selection)
+		=> critical bug !
 	- 
 
 - 09/06/2006, version 0.15 (0.1.1, 0.2.0, 0.1.5, 0.0.3): roms
